syntax = "proto3";

package com.example.trace.v1;

// ユーザー情報サービスの定義
service UserService {
  // ユーザーIDに基づいてユーザー情報を取得するRPC
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

// GetUserリクエストメッセージの定義
message GetUserRequest {
  int32 user_id = 1; // ユーザーID
}

// GetUserレスポンスメッセージの定義
message GetUserResponse {
  int32 user_id = 1; // ユーザーID
  string name = 2;   // ユーザー名
  string email = 3;  // ユーザーのメールアドレス
}
